--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
-pylint==2.13.4
+astroid==2.14.2
+dill==0.3.6
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+mypy==1.0.1
+mypy-extensions==1.0.0
 pep8==1.7.1
+platformdirs==3.1.0
+pylint==2.16.3
+tomlkit==0.11.6
+typing_extensions==4.5.0
+wrapt==1.15.0
